# penta-lemon

./: .gitignore  LICENSE  Pipfile  README.md  better-diet-lemon.sublime-project  better-diet-lemon.sublime-workspace  pipenv.sublime-build  pyproject.toml
src/better_diet_lemon/: main.py
src/penta_lemon/: const.py  core.py  main.py  time_to_xxxv.py
tests/: test_all.py  test_const.py  test_core.py  test_main.py
