[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "penta-lemon"
version = "2026.03.14.0"
requires-python = ">=3.13"
authors = [
	{ name="Mu Chu Hsu"}, 
	{email="muchu1983@gmail.com" },
	{email="muchu1983@outlook.com" }]
description = "膳易灵萌"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
penta-lemon = "penta_lemon.main:main"
